--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@angular/platform-browser-dynamic": "~9.1.7",
     "@angular/router": "~9.1.7",
     "@fortawesome/angular-fontawesome": "^0.6.1",
+    "@fortawesome/fontawesome-common-types": "^0.2.28",
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
     "zone.js": "~0.10.2"
